# taglib-api

./: README.md  taglib-api.cabal  test.hs
src/Audio/: TagLib.hs
src/Audio/TagLib/: API.hs  Internal.hs
