
name:                taglib-api
version:             0.1.0.0
synopsis:            A convenient layer over TagLib's C bindings
license:             BSD3
license-file:        LICENSE
author:              Kyle Carter
maintainer:          kylcarte@gmail.com
copyright:           Copyright 2013 Kyle Carter
category:            Audio
build-type:          Simple
cabal-version:       >=1.10
-- description:         

library
  exposed-modules:     Audio.TagLib.API
  build-depends:       base ==4.6.*
  hs-source-dirs:      src
  default-language:    Haskell2010

