
name:                taglib-api
version:             0.1.1.0
synopsis:            An FFI layer over TagLib's C bindings
license:             BSD3
license-file:        LICENSE
author:              Kyle Carter
maintainer:          kylcarte@gmail.com
copyright:           Copyright 2013 Kyle Carter
category:            Audio
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     LICENSE
description:         

flag UsePkgConfig
  Description: Use pkg-config to check for library dependencies.
  Default: True

library
  exposed-modules:     Audio.TagLib
  build-depends:       base         >= 4    && < 5    ,
                       bytestring   >= 0.9  && < 0.11 ,
                       containers   >= 0.5  && < 0.6  ,
                       mtl          >= 2.1  && < 2.2  ,
                       text         >= 0.11 && < 0.12 ,
                       transformers >= 0.2  && < 0.4
  hs-source-dirs:      src

  default-language:    Haskell2010
  if flag(UsePkgConfig)
      Pkgconfig-Depends: taglib_c
  else
      extra-libraries: tag_c

